change setting for start selenoid